# updates-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: core.rs  lib.rs
